--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -6,29 +6,23 @@
     background-image: url('../img/section-1/hero.jpg');
     background-size: cover;
     background-position: center;
-    height: 45vh;
+    background-position: 0 -200px;
+    height: 55vh;
 
     @include md{
-        height: 55vh;
+        height: 50vh;
+        background-position: 0 -700px;
     }
 
     @include lg{ 
-        height: 650px;
+        height: 55vh;
     }
 
     @include xl{
         height: 50vh;
     }
 
-    #title-container{
-        display: grid;
-        grid-template-columns: 15px auto 15px;
-        grid-template-areas:
-        ". t .";
-    
-        #title{
-            grid-area: t;
-            text-align: center;
-        }
+    #title{
+        padding: 30px;
     }
 }
