--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -3,10 +3,15 @@
 ============= */
 
 #section-3{
-    img{
-        width: 100%;
-    };
+    #section-3-img{
+        background-image: url('../img/section-3/hero2.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 520px;
+    }
+    
     #section-3-container{
+        margin: 34px 0;
 
         @include xl{
             grid-template-columns: auto 1200px auto;
@@ -33,8 +38,15 @@
         }
 
         #section-3-content{
+            >h1{
+                margin: 15px 0;
+            }
+            >hr{
+                border: none;
+                background-color: $sand;
+                height: 2px;
+            }
             grid-area: section-3-content;
-            text-align: center;
         }
     }
 }
