--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -2,27 +2,29 @@
     section1
 ============= */
 #section-1{
+    #title{
+        padding: 30px;
+    }
     
     background-image: url('../img/section-1/hero.jpg');
     background-size: cover;
     background-position: center;
     background-position: 0 -200px;
-    height: 55vh;
+    height: 380px;
 
     @include md{
-        height: 50vh;
-        background-position: 0 -700px;
+        background-size: rem-calc(1100);
+        height: 515px;
+        background-position: 0 -1200px;
     }
-
     @include lg{ 
-        height: 55vh;
+        background-size: cover;
+        height: 750px;
     }
 
     @include xl{
         height: 50vh;
     }
 
-    #title{
-        padding: 30px;
-    }
+    
 }
