bigger section2 pic

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -515,7 +515,7 @@ textarea {
         grid-area: section-2-content;
         text-align: left; } }
 #section-2 aside {
-  background-image: url("../img/section-2/section2.jpg");
+  background-image: url("../img/section-2/section2.jpeg");
   background-size: cover;
   background-position: center;
   height: 481px; }
