--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -85,7 +85,7 @@
     }
 
     aside{
-        background-image: url('../img/section-2/section2.jpg');
+        background-image: url('../img/section-2/section2.jpeg');
         background-size: cover;
         background-position: center;
         height: 481px;
