--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -10,6 +10,11 @@ ul{
     }
 }
 
+.content-margin{
+    padding: 0;
+    margin: 0;
+}
+
 .content-spacing{
     margin-top: 34px;
     @include md{
