--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -4,12 +4,13 @@
 
 #footer{
     background-color: #88A4A8;
-    height: 60px;
+    height: 80px;
 
     #footer-container{
         display: flex;
         justify-content: flex-end;
         justify-content: space-between;
+        height: 100%;
         align-items: center;
     
     }
