--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -32,6 +32,7 @@
         ". section-3-content .";
         
         @include md{
+            margin: 51px 0;
             display: grid;
             grid-template-columns: 10% auto 10%;
             grid-template-areas:
@@ -39,7 +40,7 @@
         }
 
         @include lg{
-
+            margin: 51px 0;
             display: grid;
             grid-template-columns: 20% auto 20%;
             grid-template-areas:
