--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -3,16 +3,25 @@
 ============= */
 
 #footer{
+    padding: 5px;
+    height: 50px;
     background-color: #88A4A8;
-    height: 80px;
-
     #footer-container{
         display: flex;
-        justify-content: flex-end;
         justify-content: space-between;
         height: 100%;
-        align-items: center;
-    
+        align-items: flex-end;
+        #logo{
+            background-image: url('../img/footer/logo.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100%;
+            width: 100%;
+        }
     }
+    
+    
+    
 }
     
