--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -3,6 +3,7 @@
 ============= */
 #section-1{
     position: relative;
+
     background-image: url('../img/section-1/hero.jpg');
     background-size: cover;
     background-position: center;
@@ -10,19 +11,17 @@
     height: 420px;
 
     @include md{
-        background-size: rem-calc(1050);
+        background-size: 1100px;
         height: 550px;
-        background-position: 0 -1100px;
-    }
-    @include lg{ 
-        background-size: cover;
-        height: 1050px;
-        
+        background-position: 0 -1180px;
     }
 
-    @include xl{
-        height: 50vh;
+    @include lg{
+        background-size: cover;
+        height: 720px;
+        background-position: 0 -1300px;
     }
+
 
     #title{
         padding: 30px;
@@ -33,6 +32,8 @@
             bottom: 0;
         }
         @include lg{
+            padding: 30px 0;
+            width: 100%;
             position: static;
         }
         
