--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -369,12 +369,21 @@ h1, h2, h3, h4, h5, h6, p {
       #section-2-text > h2 {
         font-size: 35px;
         line-height: 35px; } }
+    @media (min-width: 992px) {
+      #section-2-text > h2 {
+        width: 80%;
+        font-size: 43px;
+        line-height: 43px; } }
   #section-2-text > h5 {
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     font-size: 18px;
     line-height: 25px; }
-
+    @media (min-width: 992px) {
+      #section-2-text > h5 {
+        width: 90%;
+        font-size: 22px;
+        line-height: 32px; } }
 #section-3-content > h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 900;
@@ -433,19 +442,18 @@ textarea {
 #footer {
   padding: 5px;
   height: 50px;
-  background-color: #88A4A8; }
+  background-color: #88A4A8;
+  background-image: url("../img/footer/logo.svg");
+  background-size: cover;
+  background-size: 40px;
+  background-position: center;
+  background-repeat: no-repeat; }
   #footer #footer-container {
     display: flex;
-    justify-content: space-between;
     height: 100%;
+    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-end; }
-    #footer #footer-container #logo {
-      background-image: url("../img/footer/logo.svg");
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 100%;
-      width: 100%; }
 
 /* =============
     section1
@@ -520,7 +528,7 @@ textarea {
       align-self: center;
       grid-area: section-2-container;
       display: grid;
-      grid-template-columns: 15px auto 15px;
+      grid-template-columns: 15px auto 35px;
       grid-template-areas: ". section-2-content ."; } }
   #section-2 #section-2-container #section-2-content {
     grid-area: section-2-content;
@@ -534,6 +542,9 @@ textarea {
       @media (min-width: 768px) {
         #section-2 #section-2-container #section-2-content #section-2-text {
           margin: 19px 30px 19px 0; } }
+      @media (min-width: 992px) {
+        #section-2 #section-2-container #section-2-content #section-2-text {
+          margin: 25px 0; } }
       #section-2 #section-2-container #section-2-content #section-2-text > h5 {
         margin-top: 10px; }
     @media (min-width: 768px) {
