--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -3,22 +3,23 @@
 ============= */
 
 #footer{
+    
     padding: 5px;
     height: 50px;
     background-color: #88A4A8;
+    
+    background-image: url('../img/footer/logo.svg');
+    background-size: cover;
+    background-size: 40px;
+    background-position: center;
+    background-repeat: no-repeat;
+
     #footer-container{
         display: flex;
-        justify-content: space-between;
         height: 100%;
+        justify-content: flex-end;
+        justify-content: space-between;
         align-items: flex-end;
-        #logo{
-            background-image: url('../img/footer/logo.svg');
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            height: 100%;
-            width: 100%;
-        }
     }
     
     
