--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -10,6 +10,20 @@ ul{
     }
 }
 
+.show-for-medium{
+    display: none;
+    @include md{
+        display: block;
+    }
+}
+
+.show-for-large{
+    display: none;
+    @include lg{
+        display: block;
+    }
+}
+
 .content-margin{
     padding: 0;
     margin: 0;
